--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,7 +64,8 @@ ul li{
      --color-primary: #6C727D;
      --color-secondary: #0A1426;
      --color-hover: #ffffff;
-     --color-back:#9EE03A
+     --color-back:#9EE03A;
+     --color-logo:#17AABD
  
    }
    .component-stert{
@@ -137,6 +138,9 @@ width: 155px;
           background: var(--color-default) !important;
           border-bottom: 1px solid var(--color-back);
           transition: 0.8s;
+      }
+      .navber-index .show{
+        background-color: #212529;
       }
 /*end-nav*/
 /*carousel*/
@@ -271,7 +275,7 @@ color: var(--color-hover);
  .content-services .card:hover{
      transform: scale(1.02);
  }
- .content-services .card h3,.content-blog .card h3{
+ .content-services .card h3,.content-blog .card h3,.title-serch{
      color: var(--color-primary);
      font-size: 20px;
      line-height: 30px;
@@ -293,6 +297,7 @@ color: var(--color-hover);
 color: var(--color-hover);
 font-weight: 600;
 font-size: 16px;
+line-height: 18px;
 }
 .btn-primar:hover{
     background-color: var(--color-back);
@@ -539,6 +544,7 @@ border: 0px;
      
     display: grid;
     justify-items: start;
+    align-items: center;
 }
 @media (max-width:900px) {
     .content-services .card-body {
@@ -546,3 +552,241 @@ border: 0px;
         justify-items: center;
     }
 }
+/*content-us*/
+.component-hadeer{
+    background: #0B555E url(../img/banner-bg.png);
+    border-bottom: 1px solid #cdcdcd;
+    padding: 25px 0;
+    height: 320px;
+    display: flex;
+    align-items: center;
+}
+.page-title {
+    color: white;
+    font-size: 40px;
+    margin-bottom: 10px;
+    text-transform: capitalize;
+}
+.component-map iframe{
+    width: 100%;
+}
+.component-contents .contact-content a i{
+    color: #17AABD;
+}
+.form-content .form-control,.form-content .form-select{
+    box-shadow: 0px 2px 6px #dbdade inset;
+}
+.form-content .form-label{
+    color: #6C727D;
+    font-family: 'Cairo', sans-serif;
+    font-size: 16px;
+}
+/*end-content-us*/
+/*about*/
+.img-vision{
+    width: 64px;
+    height: 64px;
+}
+.about-item {
+    display: flex;
+    background: white;
+    position: relative;
+    border-radius: 7px;
+   
+    padding:25px 6px;
+    box-shadow: 0px 2px 6px #dbdade inset;
+    align-items: start;
+}
+.about-item img{
+    width: 64px;
+    height: 64px;
+}
+.about-item:hover{
+    border-bottom: 4px solid var(--color-logo);
+    transform: scale(1.02);
+}
+.about-item .title-title {
+    font-size: 18px;
+}
+.title-tem{
+    color:var(--color-primary);
+    font-size: 20px;
+    font-weight: bold;
+    text-transform: capitalize;
+}
+.img-team{
+    width: 140px;
+    height: 129px;
+}
+.p-team{
+    color:var(--color-primary);
+    font-size: 16px;
+}
+/*end-about*/
+/*blog*/
+.col-serves {
+    padding-bottom: 1rem;
+}
+.card-blog {
+    border: 0px;
+    height: 100%;
+    transition: all .5s ease-in-out;
+}
+.img-blog-date {
+    position: relative;
+    border-radius: 0px;
+}
+.card-blog .blog-img {
+    width: 100%;
+    height: 290px;
+    object-fit: cover;
+}
+.date-time {
+    position: absolute;
+    top: 40px;
+    right: 30px;
+    width: 60px;
+    height: 60px;
+    background-color: #fff;
+    border: 1px solid #1E1E1E;
+    text-align: center;
+    color: #1E1E1E;
+    padding: 8px;
+    font-weight: 300;
+    font-size: 14px;
+}
+.number-time {
+    font-size: 23px;
+    line-height: 25px;
+}
+.card-blog .card-body {
+    border: 1px solid #70707050;
+    background-color: #fff;
+    border-top: 0px;
+    padding-bottom: 0px;
+}
+.component-Know {
+    height: 43px;
+    padding-left: 20px;
+    padding-right: 20px;
+    visibility: hidden;
+    opacity: 0;
+    transition: all .5s ease-in-out;
+}
+.link-more, .link-more:hover {
+   
+    transition: all .5s ease-in-out;
+}
+.title-card{
+    color: var(--color-primary);
+    font-size: 20px;
+    line-height: 30px;
+    font-weight: 600;
+    text-transform: capitalize; 
+}
+.title-p,.date{
+    color: var(--color-primary);
+    font-size: 16px;
+    line-height: 23px;
+    font-weight: 400;
+}
+.card-blog:hover .card-body {
+    border: 0px;
+    padding-bottom: 0px;
+}
+.card-blog:hover {
+    box-shadow: 0px 10px 20px #00000011;
+    border: 0px;
+    transition: all 3s;
+    max-height: fit-content;
+}
+.card-blog:hover .date-time {
+    background-color: #0B555E;
+    color: #FFFFFF;
+    border: 0px;
+}
+.card-blog:hover .component-Know {
+    visibility: visible;
+    transition: all .5s ease-in-out;
+    opacity: 1;
+    transform: translateY(2px);
+}
+.component-serch{
+    padding: 20px;
+    background-color: #fff;
+    -webkit-box-shadow: 0px 0px 70px rgba(0, 0, 0, 0.05);
+    box-shadow: 0px 0px 70px rgba(0, 0, 0, 0.05);
+}
+.form_control {
+    background-color: #f8f8f8;
+    border-radius: 4px;
+    padding: 0 20px;
+    height: 56px;
+    border: none;
+    width: 90%;
+}
+.input-group{
+    background-color: #f8f8f8;
+}
+.search-btn {
+    border: 0px;
+    top: 20px;
+    left: 20px;
+    background-color: transparent;
+    color: #16aabc;
+}
+.row-content .img-fluid{
+    height: 100px;
+}
+.component-wor a{
+    color: var(--color-primary);
+    font-size: 16px;
+    line-height: 23px;
+    font-weight: bold;
+}
+.component-wor .card{
+    border: 0px;
+    border-bottom: 1px solid rgba(10, 20, 38, 0.1);
+}
+.category-nav li {
+    padding-bottom: 15px;
+    border-bottom: 1px solid rgba(10, 20, 38, 0.1);
+    margin-bottom: 10px;
+}
+.category-nav li a {
+    position: relative;
+    font-weight: 500;
+    color: var(--color-primary);;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-transition: all 0.2s ease-out 0s;
+    transition: all 0.2s ease-out 0s;
+}
+.category-nav li a:before{
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    content: "";
+    width: 0;
+    height: 4px;
+    background: linear-gradient(90deg, #16aabc -37.5%, #16aabc 100%);
+    margin-left: 5px;
+    visibility: hidden;
+    opacity: 0;
+    -webkit-transition: all 0.3s ease-out 0s;
+    transition: all 0.3s ease-out 0s;
+}
+.category-nav li a:hover {
+    color: #16aabc;
+}
+.category-nav li a:hover:before {
+    visibility: visible;
+    opacity: 1;
+    width: 30px;
+    margin-right: 15px;
+}
+/*end-blog*/
