--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,9 +139,21 @@ width: 155px;
           border-bottom: 1px solid var(--color-back);
           transition: 0.8s;
       }
-      .navber-index .show{
+      .navber-index .collapse.show{
         background-color: #212529;
       }
+      .navber-index .dropdown-menu.show{
+
+color: var(--color-default);
+      }
+      [dir="rtl"] .navber-index .dropdown-menu{
+        text-align: right;
+      }
+      .dropdown-item:active {
+        color: var(--bs-dropdown-link-active-color);
+        text-decoration: none;
+        background-color: var(--color-primary);
+    }
 /*end-nav*/
 /*carousel*/
 .corousel-index{
@@ -273,7 +285,7 @@ color: var(--color-hover);
  /*services*/
  .content-services .card{
      border: 0px;
-     box-shadow:  0px 5px 10px #6c727d45;;
+     box-shadow:  0px 5px 10px #6c727d45;
  }
  .content-services .card:hover{
      transform: scale(1.02);
@@ -543,11 +555,10 @@ border: 0px;
     filter: invert(100%) sepia(16%) saturate(7463%) hue-rotate(222deg) brightness(119%) contrast(115%);
 
 }
-.content-services .card-body {
-     
-    display: grid;
-    justify-items: start;
-    align-items: center;
+.content-services .card-body p{
+    line-height: 1.45em !important;
+    height: calc(4* 1.45em);
+    overflow: hidden;
 }
 @media (max-width:900px) {
     .content-services .card-body {
@@ -570,9 +581,7 @@ border: 0px;
     margin-bottom: 10px;
     text-transform: capitalize;
 }
-.component-map iframe{
-    width: 100%;
-}
+
 .component-contents .contact-content a i{
     color: #17AABD;
 }
@@ -641,7 +650,7 @@ border: 0px;
 }
 .card-blog .blog-img {
     width: 100%;
-    height: 290px;
+    height: 400px;
     object-fit: cover;
     transform: scale(1);
 }
@@ -695,6 +704,11 @@ border: 0px;
     line-height: 25px;
     font-weight: 400;
 }
+.col-serves .title-p{
+    line-height: 1.45em !important;
+    height: calc(3* 1.45em);
+    overflow: hidden;
+}
 .card-blog:hover .card-body {
     border: 0px;
     padding-bottom: 0px;
@@ -740,63 +754,9 @@ border: 0px;
     background-color: transparent;
     color: #16aabc;
 }
-.row-content .img-fluid{
-    height: 100px;
-}
-.component-wor a{
-    color: var(--color-primary);
-    font-size: 16px;
-    line-height: 23px;
-    font-weight: bold;
-}
-.component-wor a:hover{
-    color: var(--color-back);
-}
-.component-wor .card{
-    border: 0px;
-    border-bottom: 1px solid rgba(10, 20, 38, 0.1);
-}
-.category-nav li {
-    padding-bottom: 15px;
-    border-bottom: 1px solid rgba(10, 20, 38, 0.1);
-    margin-bottom: 10px;
-}
-.category-nav li a {
-    position: relative;
-    font-weight: 500;
-    color: var(--color-primary);;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-transition: all 0.2s ease-out 0s;
-    transition: all 0.2s ease-out 0s;
-}
-.category-nav li a:before{
-    display: -webkit-inline-box;
-    display: -ms-inline-flexbox;
-    display: inline-flex;
-    content: "";
-    width: 0;
-    height: 4px;
-    background: linear-gradient(90deg, #16aabc -37.5%, #16aabc 100%);
-    margin-left: 5px;
-    visibility: hidden;
-    opacity: 0;
-    -webkit-transition: all 0.3s ease-out 0s;
-    transition: all 0.3s ease-out 0s;
-}
-.category-nav li a:hover {
-    color: #16aabc;
-}
-.category-nav li a:hover:before {
-    visibility: visible;
-    opacity: 1;
-    width: 30px;
-    margin-right: 15px;
-}
+
+
+
 .defintion-blog{
     border: 1px solid #70707050;
 }
@@ -807,6 +767,10 @@ border: 0px;
 .toc_list li a{
     color: var(--color-primary);
     font-size: 16px;
+}
+.toc_list li a:hover{
+    color: var(--color-back);
+    font-weight: 500;
 }
 ::marker {
     color: var(--color-primary);
@@ -836,10 +800,17 @@ border: 0px;
 }
 /*end-blog*/
 /*pricess*/
-.col-peicess{
+.price_box_inner{
     border: 1px solid #cbc8c8;
     border-radius: 16px;
+    color: var(--color-primary);
 }
+.price_box_inner:hover{
+    background: linear-gradient(100deg, #0B555E , #428315cc ) !important;
+    color: var(--color-hover);
+    transform: scale(1.02)
+}
+
 .span-price{
     color: var(--color-back);
     font-size: 40px;
@@ -848,4 +819,44 @@ border: 0px;
     font-size: 20px;
      color: var(--color-back);
 }
+.btn-price{
+   border: 1px solid black;  
+   border-radius: 5px; 
+   margin-top: 10px; 
+   padding: 8px 35px;
+ background:#fff
+}
+
 /*end-pricess*/
+/*login*/
+.img-login{
+    height: auto;
+    min-height: 600px;
+    object-fit: cover;
+    border-radius: 16px;
+}
+.row-login{
+    box-shadow:  0px 5px 10px #6c727d45;
+    border-radius: 16px;
+}
+.logo-login{
+    width: 155px;
+    height: 78px;
+    margin: auto;
+}
+.title-login{
+    color: var(--color-primary);
+    font-weight: 600;
+    font-size: 18px;
+}
+.p-login{
+color: var(--color-primary);
+font-weight: 400;
+font-size: 16px;
+}
+.link-login{
+font-weight: bold;
+color: var(--color-logo);
+font-size: 18px;
+}
+/*end-login*/
