--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -506,7 +506,7 @@ border: 0px;
 }
 /*end-footer*/
 .component-reviews{
-    background-color: var(--color-default);
+    background-color: var(--color-logo);
 }
 .slider-1 {
     border: 4px solid #FFFFFF;
@@ -858,5 +858,59 @@ font-size: 16px;
 font-weight: bold;
 color: var(--color-logo);
 font-size: 18px;
+}
+.component-whatsapp {
+    bottom: 5%;
+    z-index: 4;
+    right: 15px;
+}
+.component-phone{
+    bottom: 10%;
+    z-index: 4;
+    right: 15px; 
+}
+[dir="rtl"] .component-whatsapp {
+    left: 2%;
+    text-align: left;
+}
+
+.component-whatsapp img{
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+}
+.compoent-price-hadder .dropdown-menu {
+    background-color: var(--color-back);
+    padding-top: 29px;
+    z-index: 112;
+    margin-top: 10px;
+  
+}
+.btn.show {
+   
+    background-color: #D8B76F;
+    color: #5E5C64;
+    position: absolute;
+    z-index: 1000;
+}
+.compoent-price-hadder .dropdown-menu.show {
+
+    position: relative;
+}
+.btn-submit{
+    background-color: var(--color-back);
+}
+.btn-submit:hover{
+    background: linear-gradient(100deg, #0B555E , #428315cc ) !important;
+    color: var(--color-hover);
+
+}
+.form-index-form{
+    background-color: var(--color-hover);
+    
+}
+.btn-submit img {
+    width: 18px;
+    height: 18px;
 }
 /*end-login*/
