--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -923,7 +923,7 @@ font-size: 18px;
     border: 0px;
     
 }
-.btn-my,.btn.show,.btn-my:hover{
+.btn-my,.btn-my.show,.btn-my:hover{
     background-color: var(--color-back);
     border-radius: 50%;
     border-top-right-radius: 50% !important;
