--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,15 +57,38 @@ ul li{
         max-width: 1200px;
     }
 }
-
+.animate-float-y {
+    -webkit-animation-name: float-y;
+    animation-name: float-y;
+    -webkit-animation-duration: 2s;
+    /* animation-duration: 2s; */
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+    -webkit-animation-timing-function: linear;
+    animation-timing-function: linear;
+}
+@keyframes float-y{
+    0% {
+        -webkit-transform: translateY(-20px);
+        transform: translateY(-20px);
+    }
+    50% {
+        -webkit-transform: translateY(-10px);
+        transform: translateY(-10px);
+    }
+    100% {
+        -webkit-transform: translateY(-20px);
+        transform: translateY(-20px);
+    }
+}
 /* Colors */
 :root {
      --color-default: #000000;
      --color-primary: #6C727D;
      --color-secondary: #0A1426;
      --color-hover: #ffffff;
-     --color-back:#9EE03A;
-     --color-logo:#17AABD
+     --color-back:#4c8f3a;
+     --color-logo:#0B555E
  
    }
    .component-stert{
@@ -105,7 +128,7 @@ ul li{
 width: 155px;
 }
 .navber-index .navbar-nav .nav-item{
-     margin: 0px 8px;
+     margin: 0px 7px;
 }
 .navber-index .navbar-nav .nav-link{
      font-size: 16px;
@@ -119,24 +142,27 @@ width: 155px;
      color: var(--color-hover);
 }
 .navber-index .navbar-nav .active {
-     color: var(--color-back);
+     color: var(--color-logo);
      font-size: 18px;
      line-height: 40px;
      text-transform: capitalize;
-     border-bottom: 1px solid var(--color-back);
-     font-weight: 600;
+     border-bottom: 1px solid var(--color-logo);
+     font-weight: 800;
      padding-bottom: 6px;
      padding-right: var(--bs-navbar-nav-link-padding-x);
     padding-left: var(--bs-navbar-nav-link-padding-x);
  }
+ .navber-index .navbar-nav .active:hover {
+color: var(--color-hover);
+ }
  .nav-login-lang{
-     border: 1px solid var(--color-back);
+     border: 1px solid var(--color-logo);
      padding: 0px 3px;
      border-radius: 8px;
       }
       .navber-index.scrolled {
-          background: var(--color-default) !important;
-          border-bottom: 1px solid var(--color-back);
+          background: var(--color-secondary) !important;
+          border-bottom: 1px solid var(--color-secondary);
           transition: 0.8s;
       }
       .navber-index .collapse.show{
@@ -176,7 +202,7 @@ color: var(--color-default);
      object-fit: cover;
      object-position: 50% 50%;
      background-repeat: no-repeat;
-     background-color: #00000036;
+     /* background-color: #00000036; */
  }
  @media (min-width:1000px) {
      .corousel-index .carousel-caption {
@@ -208,7 +234,7 @@ color: var(--color-hover);
  }
  .button-stert{
    
-    background-color: var(--color-hover);
+    background: var(--color-hover);
      color: var(--color-secondary);
      border-radius: 8px;
      font-weight: bold;
@@ -217,7 +243,7 @@ color: var(--color-hover);
  .button-stert:hover{
      color: var(--color-hover);
     
-     background: linear-gradient(100deg, #0B555E , #428315cc );
+     background:var(--color-secondary);
  }
  /*end-carousel*/
    
@@ -261,14 +287,13 @@ color: var(--color-hover);
  #myBtn {
      width: 50px;
      height: 50px;
-     background-image: url(../img/play.png);
+     background-image: url(../img/play-button.png);
      background-repeat: no-repeat;
      z-index: 1;
      background-size: cover;
      cursor: pointer !important;
      border: 0px;
      border-radius: 50%;
-     filter: invert(100%) sepia(16%) saturate(7463%) hue-rotate(222deg) brightness(119%) contrast(115%);
 
  }
  .component-video video {
@@ -276,19 +301,20 @@ color: var(--color-hover);
      height: 300px;
      border-radius: 8px;
  }
- .component-video:hover #myBtn {
-     background-image: url(../img/play-video.png);
-     filter: invert(100%) sepia(16%) saturate(7463%) hue-rotate(222deg) brightness(119%) contrast(115%);
-
- }
+ 
  /*end-about*/
  /*services*/
  .content-services .card{
      border: 0px;
-     box-shadow:  0px 5px 10px #6c727d45;
+  
+     background-color: #ffffff8a; 
+    -webkit-box-shadow: 0px 0px 70px rgba(0, 0, 0, 0.05);
+    box-shadow: 0px 0px 70px rgba(0, 0, 0, 0.05);
  }
  .content-services .card:hover{
      transform: scale(1.02);
+    
+     
  }
  .content-services .card h3,.content-blog .card h3,.title-serch{
      color: var(--color-primary);
@@ -300,11 +326,22 @@ color: var(--color-hover);
  .content-blog .card h3{
     font-size: 18px;
  }
+ .content-blog .card h3{
+    line-height: 1.25em !important;
+    height: calc(2* 1.25em);
+    overflow: hidden;
+
+ }
  .content-services .card p,.content-blog .card p{
      color: var(--color-primary);
      font-size: 16px;
      line-height: 23px;
      font-weight: 400;
+ }
+ .content-blog .card p{
+    line-height: 1.25em !important;
+    height: calc(4* 1.25em);
+    overflow: hidden;
  }
 .btn-primar{
     background: linear-gradient(100deg, #0B555E , #428315cc );
@@ -315,7 +352,7 @@ font-size: 16px;
 line-height: 18px;
 }
 .btn-primar:hover{
-    background-color: var(--color-back);
+    background: var(--color-secondary) !important;
      color: var(--color-hover);    
 }
 .img-fluid{
@@ -329,7 +366,8 @@ object-fit: contain;
 }
  /*end-services*/
  .component-adver{
-    background: url(../img/Artboard.png);
+   
+    background: linear-gradient(100deg, #0B555E , #428315cc );
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
@@ -341,6 +379,11 @@ object-fit: contain;
      font-weight: 600;
      line-height: 30px;
      color: var(--color-hover);
+ }
+ @media (max-width:600px) {
+    .defintion-abver h6{
+        font-size: 25px;
+    }  
  }
  .defintion-abver p{
      font-size: 16px;
@@ -370,14 +413,14 @@ object-fit: contain;
      font-weight: 400;
  }
  .component-custmer{
-     background-image: url(../img/Artboard.png);
+     background: #090412;
      background-size: cover;
     position: relative;
      
  }
  .over{
      position: absolute;
-    background-color: #000000cc;
+    background-color: #090412;
     width: 100%;
     top: 0px;
     left: 0px;
@@ -414,14 +457,38 @@ border: 0px;
 }
 .shape-tri {
     position: absolute;
-    left: 110px;
-    width: 500px;
+    left: 30%;
+   
 }
 .shape-left {
     position: absolute;
     top: -159px;
     width: 420px;
-    right: -400px;
+    
+}
+@media (min-width:900px) {
+    .shape-left {
+        right: -400px;
+    }
+}
+@media (max-width:800px) {
+    .shape-left {
+        width: 220px;
+    }
+    [dir="rtl"] .shape-tri {
+        left: 65%;
+    }
+    [dir="ltr"] .shape-tri {
+        right: 45%;
+    }
+}
+@media (max-width:400px) {
+    [dir="rtl"] .shape-tri {
+        left: 70%;
+    }
+    [dir="ltr"] .shape-tri {
+        right: 50%;
+    }
 }
 .button-wiet{
     background-color: var(--color-hover);
@@ -433,7 +500,7 @@ border: 0px;
 }
 .button-wiet:hover{
     color: var(--color-hover);
-    background:var(--color-back)
+    background:#0A1426
 }
 .pb-55 {
     padding-bottom: 55px;
@@ -512,7 +579,7 @@ border: 0px;
 }
 /*end-footer*/
 .component-reviews{
-    background-color: var(--color-logo);
+    background-color: #090412;
 }
 .slider-1 {
     border: 4px solid #FFFFFF;
@@ -574,7 +641,8 @@ border: 0px;
 }
 /*content-us*/
 .component-hadeer{
-    background: #0B555E url(../img/banner-bg.png);
+  
+    background-image: url(../img/advertisements.png);
     border-bottom: 1px solid #cdcdcd;
     padding: 25px 0;
     height: 320px;
@@ -713,6 +781,11 @@ border: 0px;
 .col-serves .title-p{
     line-height: 1.45em !important;
     height: calc(3* 1.45em);
+    overflow: hidden;
+}
+[dir="ltr"] .col-serves .title-card{
+    line-height: 1.45em !important;
+    height: calc(2* 1.45em);
     overflow: hidden;
 }
 .card-blog:hover .card-body {
@@ -958,6 +1031,12 @@ color: var(--color-hover);
 }
 .dropdown-content{
     bottom: 116%;
+    
+}
+[dir="rtl"] .dropdown-content{
     text-align: right;
+}
+[dir="ltr"] .dropdown-content{
+    text-align: left;
 }
 /*end-login*/
