--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1086,3 +1086,7 @@ color: var(--color-hover);
     box-shadow: 0px 0px 70px rgba(0, 0, 0, 0.05);
     border-radius: 16px;
 }
+.img-repet{
+    width: 50px;
+    height: 50px;
+}
