--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -249,7 +249,7 @@ color: var(--color-hover);
    
  /*about*/
  .title-title{
-     color: var(--color-secondary);
+     color: var(--color-primary);
      font-size: 30px;
      text-transform: capitalize;
      font-weight: bold;
@@ -911,6 +911,7 @@ display: none;
     border: 1px solid #cbc8c8;
     border-radius: 16px;
     color: var(--color-primary);
+    background-color: #b3e1a570;
 }
 .price_box_inner:hover{
     background: linear-gradient(100deg, #0B555E , #428315cc ) !important;
@@ -919,7 +920,7 @@ display: none;
 }
 
 .span-price{
-    color: var(--color-back);
+   
     font-size: 40px;
 }
 .nk-pricing-body i{
@@ -1089,4 +1090,21 @@ color: var(--color-hover);
 .img-repet{
     width: 50px;
     height: 50px;
+}
+.img-system{
+    height: auto;
+    max-height: 400px;
+}
+.img-accountiong{
+    width: 70px;
+    padding: 3px;
+    height: 70px;
+   
+    margin-bottom: 10px;
+}
+.title-accountin{
+    color: var(--color-primary);
+    font-size: 20px;
+    font-weight: 600;
+    text-transform: capitalize;
 }
