--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1081,7 +1081,9 @@ color: var(--color-hover);
 }
 .img-or{
     width: 100%;
-    height: 190px;
+    height: 300px;
+    object-fit: contain;
+    max-height: 400px;
 }
 .component-or{
     box-shadow: 0px 0px 70px rgba(0, 0, 0, 0.05);
