--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,6 +126,8 @@ ul li{
 /*nav*/
 .navbar-brand img{
 width: 155px;
+height: auto;
+max-height: 78px;
 }
 .navber-index .navbar-nav .nav-item{
      margin: 0px 7px;
@@ -210,7 +212,16 @@ color: var(--color-default);
           bottom: 30%;
       }
  }
- 
+ @media (max-width:990px) {
+    .corousel-index .carousel-caption {
+         z-index: 2;
+         bottom: 10%;
+     }
+}
+.corousel-index .carousel-caption {
+    left:10%;
+    right: 10%;
+}
  .corousel-index .carousel-caption h5{
 font-size: 35px;
 font-weight: bold;
@@ -220,7 +231,7 @@ color: var(--color-hover);
  }
  @media (max-width:600px) {
      .corousel-index .carousel-caption h5{
-          font-size: 20px;
+          font-size: 18px;
      }
      .col-button-con{
         margin-top: 30px;
@@ -232,6 +243,13 @@ color: var(--color-hover);
      font-weight: 400;
      line-height: 31px;
  }
+ @media (max-width:600px) {
+ .corousel-index .carousel-caption p{
+    line-height: 1.55em !important;
+    height: calc(8* 1.55em);
+    overflow: hidden;
+ }
+}
  .button-stert{
    
     background: var(--color-hover);
