--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,7 +133,7 @@ max-height: 78px;
      margin: 0px 7px;
 }
 .navber-index .navbar-nav .nav-link{
-     font-size: 17px;
+     font-size: 15px;
      color: #fff;
      font-weight: bold;
      text-transform: capitalize;
@@ -204,7 +204,7 @@ color: var(--color-default);
      object-fit: cover;
      object-position: 50% 50%;
      background-repeat: no-repeat;
-      background-color: #000000a1;;
+      background-color: #000000a1;
  }
  @media (min-width:1000px) {
      .corousel-index .carousel-caption {
@@ -687,7 +687,7 @@ display: none;
 }
 .page-title {
     color: white;
-    font-size: 40px;
+    font-size: 30px;
     margin-bottom: 10px;
     text-transform: capitalize;
 }
@@ -771,11 +771,14 @@ display: none;
 }
 .card-blog .blog-img {
     width: 100%;
-    height: 400px;
+    height: 200px;
     object-fit: cover;
     transform: scale(1);
 }
-
+.card-definti-blog .blog-img {
+    width: 100%;
+    height: 400px;
+}
 .date-time {
     position: absolute;
     top: 40px;
