--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,6 +52,11 @@ a:hover,a{
 ul li{
      list-style: none;
 }
+p{
+    color: var(--color-primary);
+ 
+    font-weight: 400;
+}
 @media (min-width: 1200px){
     .container, .container-lg, .container-md, .container-sm, .container-xl {
         max-width: 1200px;
@@ -279,7 +284,11 @@ color: var(--color-hover);
      line-height: 30px;
      font-weight: 400;
      color: var(--color-primary);
+   
  }
+ .component-about  .p-decerption{
+    text-align: justify;
+ } 
  .video-date {
      display: flex;
      justify-content: center;
@@ -356,6 +365,11 @@ color: var(--color-hover);
      line-height: 23px;
      font-weight: 400;
  }
+ .content-services .card-body{
+    display: grid;
+    grid-template-rows: 0.25fr 1fr;
+    align-items: start;
+ }
  .content-blog .card p{
     line-height: 1.25em !important;
     height: calc(4* 1.25em);
@@ -378,7 +392,12 @@ line-height: 18px;
      border-top-left-radius: 8px;
      height: 245px;
 }
-
+.component-content .p-decerption{
+   text-align: justify;
+}
+.component-hadeer p{
+    text-align: center;
+}
  /*end-services*/
  .component-adver{
    
@@ -444,6 +463,10 @@ line-height: 18px;
  .row-custemer{
      position: relative;
      color: var(--color-hover);
+ }
+ .row-custemer p{
+    color: var(--color-hover);
+    font-size: 1.15rem;
  }
  .component-team-new img{
      width: 128px !important;
@@ -652,11 +675,7 @@ display: none;
 
 }
 @media (min-width:900px) {
-    .content-services .card-body p{
-        line-height: 1.35em !important;
-        height: calc(5* 1.35em);
-        overflow: hidden;
-    }
+    
 .services-other .card-body p{
     line-height: 1.45em !important;
     height: calc(3* 1.45em);
@@ -690,6 +709,7 @@ display: none;
     font-size: 30px;
     margin-bottom: 10px;
     text-transform: capitalize;
+    text-align: center;
 }
 
 .component-contents .contact-content a i{
@@ -1147,7 +1167,7 @@ color: var(--color-hover);
     {
         font-size: 1.45em;
     }
-    .content-services .card p, .content-blog .card p{
+   .content-blog .card p{
         line-height: 1.45em !important;
         height: calc(5* 1.45em);
     
@@ -1202,4 +1222,7 @@ line-height: 40px;
     }  
    
  
+}
+[dir="ltr"] .component-or .text-end{
+    text-align: left !important;
 }
