--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1276,3 +1276,21 @@ text-align: right;
     margin-bottom: 5px;
    }
 }
+.card-definti-blog .blog-img {
+    width: 100%;
+    height: 600px;
+}
+@media (max-width:600px) {
+    .card-definti-blog .blog-img {
+height: 200px;
+
+    }
+    
+}
+@media (min-width:600px) and (max-width:990px) {
+    .card-definti-blog .blog-img {
+height: 270px;
+
+    }
+    
+}
